--- a/app/src/client/src/App.css
+++ b/app/src/client/src/App.css
@@ -29,3 +29,33 @@ ul {
 .footer a {
   color : #d3d3d6 !important;
 }
+
+.operation-btn {
+  outline: none;
+  border:none;
+  background: transparent;
+  color: white;
+  line-height:inherit;
+  cursor: pointer;
+  width:40px;
+  height:40px;
+  border-radius : 40px;
+  margin: 5px 0;
+}
+.operation-btn > * {
+  font-size: 16px;
+  vertical-align: super;
+}
+.operation-btn:hover {
+  background-color:rgb(0,0,0,0.2);
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+}
+.float-right {
+  float:right;
+}
+.float-left {
+  float:left;
+}
+.clear-both {
+  clear: both;
+}
