--- a/app/src/client/src/styles/auth/Form.css
+++ b/app/src/client/src/styles/auth/Form.css
@@ -17,7 +17,7 @@
 
 .submit-btn {
     padding: 15px 30px;
-    margin: 0;
+    margin: 0 10px;
     border: none;
     cursor: pointer;
     background-color: #585858;
