--- a/app/src/client/src/styles/item/ItemHome.css
+++ b/app/src/client/src/styles/item/ItemHome.css
@@ -6,17 +6,17 @@
     width:400px;
     background-color:#eee;
 }
+
 .item-title {
     position:absolute;
     top:0;
     left:0;
     right:0;
     height: 50px;
-    text-align: center;
     background-color: #E8352C;
     color:white;
     margin:0;
-    padding:0;
+    padding:0 10px;
     box-shadow: 0px 1px 2px #333;
     line-height:50px;
     z-index:999;
