--- a/app/src/client/src/styles/restaurant/outlet/OutletHome.css
+++ b/app/src/client/src/styles/restaurant/outlet/OutletHome.css
@@ -1,7 +1,7 @@
 .outlet-list-tray {
-    position:absolute;
-    top:0;
-    bottom:0;
+    position:fixed;
+    top:60px;
+    bottom:40px;
     left: 60px;
     width:300px;
     background-color:#f9f6f6;
@@ -12,10 +12,9 @@
     left:0;
     right:0;
     height: 50px;
-    padding:0;
+    padding:0 10px;
     line-height:50px;
     z-index:999;
-    text-align: center;
     background-color: #d92a41;
     color:white;
     margin:0;
@@ -28,7 +27,7 @@
     left:0;
     right:0;
     bottom:0;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 .outlet-list-item {
     padding:20px 10px;
@@ -42,4 +41,9 @@
     color : black;
     margin: 0;
     text-decoration: none;
+}
+
+.outlet-list-item-detail {
+    width: 200px;
+    display: inline-block;
 }
