--- a/app/src/client/src/App.css
+++ b/app/src/client/src/App.css
@@ -22,12 +22,12 @@ ul {
   text-align: center;
   background-color: #f9f9f9;
   padding:10px;
-  color:#d3d3d6 !important;
+  color:#969696 !important;
   font-family: sans-serif;
   font-size: 12px;
 }
 .footer a {
-  color : #d3d3d6 !important;
+  color : #969696 !important;
 }
 
 .operation-btn {
