--- a/app/src/client/src/styles/Navbar.css
+++ b/app/src/client/src/styles/Navbar.css
@@ -18,4 +18,7 @@
     font-weight: bold;
     margin: 0 10px;
     cursor: pointer;
+    text-decoration: none;
+    color:#000;
+    font-size: 14px;
 }
