--- a/app/src/client/src/styles/auth/AuthenticationHome.css
+++ b/app/src/client/src/styles/auth/AuthenticationHome.css
@@ -1,41 +1,48 @@
 .authentication-form {
-    position:fixed;
-    top:60px;
-    bottom:40px;
-    left:0;
-    right:0;
+    position: fixed;
+    top: 60px;
+    bottom: 40px;
+    left: 0;
+    right: 0;
     overflow-y: scroll;
-    margin-bottom:20px;
+    margin-bottom: 20px;
 }
+
 .authentication-form .radio-selection {
-    position:absolute;
-    height:40px;
-    left:0;
-    right:0;
+    position: absolute;
+    height: 40px;
+    left: 0;
+    right: 0;
     text-align: center;
 }
+
 .authentication-form .usertype-selection {
-    top:20px;
+    top: 20px;
 }
+
 .authentication-form .auth-type-selection {
-    top:70px;
+    top: 70px;
 }
+
 .selection {
-    padding:10px 100px;
-    width:100px;
-    display:inline-block;
+    padding: 10px 100px;
+    width: 100px;
+    display: inline-block;
     background-color: #eee;
     cursor: pointer;
 }
+
 .selected {
-    background-color:#585858;
-    color:white;
+    background-color: #585858;
+    color: white;
 }
+
 .left-border-curved {
-    border-radius:10px 0px 0 10px;
+    border-radius: 10px 0px 0 10px;
 }
+
 .right-border-curved {
-    border-radius:0 10px 10px 0;
+    border-radius: 0 10px 10px 0;
 }
 
 .auth-form {
@@ -44,4 +51,9 @@
     left: 0;
     right: 0;
     text-align: center;
+}
+
+.validation {
+    color: red;
+    margin-left: 2%;
 }
